--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-Hello World
+<!doctype html>
+<html lang="en" class="no-js">
+<head>
+  <base target="_blank">
+  <meta charset="UTF-8" />
+  <title>Bryan Lurer</title>
+  <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" type="text/css">
+  <!-- remember, jQuery is completely optional -->
+  <!-- <script type='text/javascript' src='js/jquery-1.11.1.min.js'></script> -->
+  <script type="text/javascript" src="js/jquery.particleground.js"></script>
+  <script type="text/javascript" src="js/demo.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141760038-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141760038-1');
+</script>
+
+
+</head>
+
+<body>
+
+<div id="particles">
+  <div id="intro">
+      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Bryan Lurer</h2>
+        <hr style="width: 50%; background-color: #3282b8; border-color: #3282b8;">
+    <a href="https://www.linkedin.com/in/blurer/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>  
+    <a href="https://www.instagram.com/bryanlurer/" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a> 
+    <a href="https://github.com/blurer/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a> 
+
+    <a href="mailto:web@bryanlurer.com" style="color: white;"><i class="fas fa-at" style="font-size: 2em;"></i></a>  
+    <a href="https://time.bryanlurer.com/" style="color: white;"><i class="far fa-clock" style="font-size: 2em;"></i></a> 
+    <a href="https://anfang.pw"  style="color: white;"><i class="fas fa-external-link-alt" style="font-size: 2em;"></i></a> 
+    <hr style="width: 50%; background-color: #3282b8; border-color: #3282b8;">
+  </div>
+</div>
+
+</body>
+</html>
