--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
       <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Bryan Lurer</h2>
         <hr style="width: 50%; background-color: #3282b8; border-color: #3282b8;">
     <a href="https://www.linkedin.com/in/blurer/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>  
-    <a href="https://www.instagram.com/bryanlurer/" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a> 
+    <a href="https://www.instagram.com/itsblurer" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a> 
     <a href="https://github.com/blurer/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a> 
-
-    <a href="mailto:web@bryanlurer.com" style="color: white;"><i class="fas fa-at" style="font-size: 2em;"></i></a>  
+    <a href="mailto:web@lurer.io" style="color: white;"><i class="fas fa-at" style="font-size: 2em;"></i></a>  
     <a href="https://time.bryanlurer.com/" style="color: white;"><i class="far fa-clock" style="font-size: 2em;"></i></a> 
     <a href="https://anfang.pw"  style="color: white;"><i class="fas fa-external-link-alt" style="font-size: 2em;"></i></a> 
     <hr style="width: 50%; background-color: #3282b8; border-color: #3282b8;">
